<resources>
    <string name="app_name">FoodBiller</string>
    <string name="what_toppings_you_want_for_the_pizza">What toppings you want for the pizza ?</string>
    <string name="paneer">Paneer</string>
    <string name="mushroom">Mushroom</string>
    <string name="onions">Onions</string>
    <string name="capscicum">Capscicum</string>
    <string name="no_toppings_are_you_mad">No Toppings (Are you mad ?)</string>
    <string name="your_bill_amount_will_be">Your bill amount will be -</string>
    <string name="base_bill_amount_100_rs">Base Bill Amount - 100 rs</string>
    <string name="food_biller">Food Biller</string>
</resources>